# agent-audit

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add-adapter.yml  bug-report.yml
.github/workflows/: ci.yml  publish.yml
agent_audit/: __init__.py  __main__.py  cli.py  types.py
agent_audit/adapters/: __init__.py  base.py  claude_code.py  codex.py  helpers.py  mcp_generic.py  nanobot.py  openclaw.py
agent_audit/checks/: __init__.py  filesystem.py  network.py  secrets.py  shell.py  skills.py
agent_audit/core/: __init__.py  monitor.py  reporter.py  risk.py  scanner.py
agent_audit/utils/: display.py  paths.py
docs/: ADDING_ADAPTERS.md  ARCHITECTURE.md  RISK_MODEL.md
scripts/: make_demo_gif.sh
tests/: test_adapters.py  test_cli.py  test_monitor.py  test_risk.py  test_scanner.py
tests/fixtures/codex_scoped/.codex/: config.toml  skills.json
tests/fixtures/openclaw_basic/: openclaw.json  skills.json
