[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "graniteai-agent-audit"
version = "0.16.3"
description = "Universal security scanner for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
  "ai-agent-security",
  "llm-security",
  "mcp",
  "codex",
  "claude-code",
  "openclaw",
  "cli-security-scanner",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]
authors = [
  { name = "agent-audit contributors" }
]
dependencies = [
  "typer>=0.16.0",
  "rich>=13.9.0"
]

[project.scripts]
agent-audit = "agent_audit.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["agent_audit"]
